[project]
name = "eda-cli"
version = "0.1.0"
description = "Mini EDA CLI project"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "matplotlib",
    "typer",
    "pytest>=9.0.2",
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.21",
]


[project.scripts]
eda-cli = "eda_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.uv]
package = true

